--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>CS Tutor</title>
+    <title>localhost:3000</title>
   </head>
   <body>
     <div id="root"></div>
