--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,13 @@
       rel="stylesheet"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>localhost:3000</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playwrite+HR+Lijeva:wght@100..400&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&family=Varela+Round&display=swap"
+      rel="stylesheet"
+    />
+    <title>React Tutor</title>
   </head>
   <body>
     <div id="root"></div>
